scanner: Add a configurable file archiver for scanned files
Use a `FileArchiver` in the scanner to archive scanned files. By default
archived files are stored in ~/.ort/scanner/archive but this can be
overridden in the configuration.

By default only license files are archived as they will be used in the
notice file generator in a future commit.

TODO
- Update documentation
- Add tests
- Test how the file storage configuration can be reused in HOCON (at
  least partly)
- Rebase on top of file saver commit

Signed-off-by: Martin Nonnenmacher <martin.nonnenmacher@here.com>

--- a/cli/src/main/resources/default.conf
+++ b/cli/src/main/resources/default.conf
@@ -1,4 +1,14 @@
 // The default ORT configuration. All options not overwritten using another configuration option like a configuration
 // file are used as defined in this file.
 ort {
+  scanner {
+    archive {
+      patterns = ["LICENSE*", "COPYING*"]
+      storage {
+        localFileStorage {
+          directory = ~/.ort/scanner/archive
+        }
+      }
+    }
+  }
 }
