--- a/model/src/main/resources/reference.conf
+++ b/model/src/main/resources/reference.conf
@@ -2,6 +2,15 @@
 // exclusive, so this file is only used to show all options and to validate the configuration.
 ort {
   scanner {
+    archive {
+      patterns = ["LICENSE*", "COPYING*"]
+      storage {
+        localFileStorage {
+          directory = ~/.ort/scanner/archive
+        }
+      }
+    }
+
     fileBasedStorage {
       backend {
         httpFileStorage {
@@ -13,7 +22,7 @@ ort {
         }
 
         localFileStorage {
-          directory = ~/.ort/scanner
+          directory = ~/.ort/scanner/results
         }
       }
     }
